@@ -67,7 +67,6 @@ binary-arch-flavour: install-headers_$(ARCH)_$(FEATURESET)_$(FLAVOUR)
 
 ifneq ($(DO_DOCS),False)
   binary-indep: install-doc
-  binary-indep: install-manual
   build-indep: $(STAMPS_DIR)/build-doc
 endif
 binary-indep: install-source
@@ -232,19 +231,11 @@ install-doc: $(STAMPS_DIR)/build-doc
 		-name 'Makefile*' -prune -o \
 		-print | \
 	cpio -pd --preserve-modification-time '$(CURDIR)/$(OUT_DIR)'
-# Some HTML pages are generated by xmlto from DocBook XML and some by
-# Sphinx from reStructedText.  Unfortunately these each generate their
-# own top level index.html, so we put them in two separate
-# subdirectories until the conversion to RST is complete.
-	set -o pipefail; \
-	cd $(DIR)/Documentation/DocBook; \
-	find * -name '*.html' -print | \
-	cpio -pd --preserve-modification-time '$(CURDIR)/$(OUT_DIR)/html/oldstyle'
 	set -o pipefail; \
 	cd $(DIR)/Documentation/output; \
 	find * -name '*.rst' -prune -o -name objects.inv -prune \
 		-o -name xml -prune -o -print | \
-	cpio -pd --preserve-modification-time '$(CURDIR)/$(OUT_DIR)/html/newstyle'
+	cpio -pd --preserve-modification-time '$(CURDIR)/$(OUT_DIR)/html'
 	find $(OUT_DIR)/Documentation -type f | xargs gzip -9n
 # Fix up symlinks to gzipped docs
 	cd $(OUT_DIR)/Documentation; \
