@@ -64,7 +64,6 @@ Build-Depends-Indep:
  graphviz <!stage1 !nodoc>,
  python-sphinx <!stage1 !nodoc>,
  python-sphinx-rtd-theme <!stage1 !nodoc>,
- xmlto <!stage1 !nodoc>,
 Vcs-Git: https://anonscm.debian.org/git/kernel/linux.git
 Vcs-Browser: https://anonscm.debian.org/cgit/kernel/linux.git
 Homepage: https://www.kernel.org/
