@@ -5,6 +5,8 @@ linux (4.13~rc4-1~exp1) UNRELEASED; urgency=medium
   [ Ben Hutchings ]
   * cpupower: Add/update definition of MSRHEADER macro for turbostat and
     x86_energy_perf_policy
+  * Remove support for upstream DocBook-based documentation, including the
+    linux-manual package
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sun, 13 Aug 2017 14:10:41 +0100
 
